--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,9 +26,9 @@
   </div>
 
   <input type="checkbox" id="clickMenu">
-  <label class="menu-btn" for="clickMenu">
-    <fa-icon *ngIf="!isMenuOpen" [icon]="menuIcon" (click)="toggleMenu()"></fa-icon>
-    <fa-icon *ngIf="isMenuOpen" [icon]="closeIcon" (click)="toggleMenu()"></fa-icon>
+  <label class="menu-btn" for="clickMenu" (click)="toggleMenu()">
+    <fa-icon *ngIf="!isMenuOpen" [icon]="menuIcon" ></fa-icon>
+    <fa-icon *ngIf="isMenuOpen" [icon]="closeIcon" ></fa-icon>
   </label>
 
   <ul id="menu">
@@ -36,6 +36,7 @@
     <li><a routerLink="/about" (click)="toggleMenu()">About</a></li>
     <li><a routerLink="/services" (click)="toggleMenu()">{{ 'services' | translate}}</a></li>
     <li><a routerLink="/contact" (click)="toggleMenu()">{{ 'contacts' | translate}}</a></li>
+    <li><a routerLink="/login">{{ 'login' | translate}}</a></li>
   </ul>
 
 </nav>
