--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,57 @@
+<!--
+<div class="container">
+  <img src="assets/img/italia.jpg">
+</div>
+-->
+
 <p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+
 
