--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,31 @@
+<app-navbar></app-navbar>
 
-<div class="page-container">
+
+
+
+
+
+
+  <!--
   <div class="header">
     <switchlang></switchlang>
 
     <navbar></navbar>
   </div>
-
+ -->
 
   <!-- <a href="#" (click)="$event.preventDefault(); goToContact()">Contact Us</a> -->
-
-  <div class="content">
-    <router-outlet></router-outlet>
-  </div>
+<div class="page-container">
+  <router-outlet></router-outlet>
 </div>
 
 
 
-<app-footer></app-footer>
 
+
+<!--
+<app-footer></app-footer>
+-->
 
 
 
