--- a/src/app/header/login/login.component.html
+++ b/src/app/header/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login-container">
-  <a href="#">
+  <a routerLink="/">
     <i class="fa fa-user-circle" aria-hidden="true"></i>
     {{ "login" | translate}}
   </a>
-  <a href="#">
+  <a routerLink="/">
     <i class="fa fa-user-plus" aria-hidden="true"></i>
     {{ "sign-up" | translate}}
   </a>
