--- a/src/app/header/navbar/navbar.component.css
+++ b/src/app/header/navbar/navbar.component.css
@@ -130,6 +130,22 @@
 
 @media screen and (max-width: 690px) {
 
+  /* GENERAL */
+  .navbar{
+    background-color: white;
+    padding: 30px 0;
+    border-bottom: solid 2px rgba(145, 17, 14, 0.5);
+    position: fixed;
+    width: 100%;
+    top: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    transition: all ease-out 0.25s;
+  }
+
   .navbar.navbar-scroll{
     padding: 10px 0;
     border-bottom: solid 3px rgba(145, 17, 14, 0.5);
