--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,93 +1,87 @@
-/* FOOTER */
-.container {
-  margin: auto;
-  bottom: 0;
-  width: 100%;
-  height: auto;
+.site-footer
+{
+  background-color:#91110E;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:white;
+}
+.site-footer hr
+{
+  border-top-color:white;
+  opacity:0.5
+}
+.site-footer hr.small
+{
+  margin:20px 0
+}
+
+
+
+.site-footer .social-icons
+{
+  text-align:right;
+}
+.social-icons a{
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear;
+  margin-left:6px;
   background-color: #91110E;
-  position: relative;
-  padding: 40px 20px;
 }
-
-.footer-content{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-/* FOOTER TITLE */
-.footer-content h1{
-  font-weight: 500;
-  letter-spacing: 1px;
+.site-footer .social-icons a i {
   color: white;
 }
 
-/* FOOTER DESCRIPTION */
-.footer-content p{
-  font-size: 18px;
-  font-weight: 500;
-  max-width: 500px;
-  margin: 10px auto;
-  line-height: 28px;
-  color: white;
+.site-footer .social-icons a:hover{
+  background-color:white;
 }
-
-.footer-content p span{
-  font-weight: 600;
-}
-
-/* ICONS */
-.socials{
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.socials li{
-  margin: 20px;
-  display: flex;
-}
-.socials li a{
-  display: block;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-
-  transition: all 0.3s ease;
-}
-
-.socials a i{
-  font-size: 30px;
-
-  transition: all 0.3s ease;
-}
-.socials li:hover i {
-  color: #420200;
-  font-size: 35px;
+.site-footer .social-icons a:hover i {
+  color: #91110E;
 }
 
 
-/* COPYRIGHT */
-.footer-bottom{
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
 }
 
-.footer-bottom p{
-  font-size: 12px;
-  word-spacing: 2px;
-  color: white;
-}
 
-/* MEDIA */
-@media (max-width:500px) {
-  .footer-menu ul{
-    display: flex;
-    margin-top: 10px;
-    margin-bottom: 20px;
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
   }
 }
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+
