--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,26 +1,29 @@
-<div class="container">
-  <div class="footer-content">
+<!-- Site footer -->
+<footer class="site-footer">
+
+  <div class="container">
     <h1>La Dolce Vita</h1>
     <p>{{ 'footer-description' | translate }}</p>
-
-    <ul class="socials">
-      <li><a
-        href="https://instagram.com/ladolcevita.society?igshid=MzRlODBiNWFlZA=="
-        target="_blank"
-        title="Instagram"
-      ><i class="fa fa-instagram"></i></a></li>
-      <li><a
-        href="mailto:ladolcevita.society@gmail.com"
-        title="Email"
-      ><i class="fa fa-envelope"></i></a></li>
-    </ul>
-
+    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Via A. Volta, 18, Corsico (MI) [Italy]</p>
+    <hr>
   </div>
 
-  <div class="footer-bottom">
-    <p>©2023 by La Dolce Vita. All Rights Reserved.</p>
-  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">
+          ©2023 by La Dolce Vita. All Rights Reserved.
+        </p>
+      </div>
 
-</div>
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a title="Instagram" class="instagram" href="https://instagram.com/ladolcevita.society?igshid=MzRlODBiNWFlZA=="><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+          <li><a title="Email" class="email" href="mailto:ladolcevita.society@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 
 
