--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  flex-grow: 1;
 }
+
+app-footer {
+  position: sticky;
+  top: 100%;
+}
+
 
 /*
 .container {
