--- a/src/app/popups/login-popup/login-popup.component.css
+++ b/src/app/popups/login-popup/login-popup.component.css
@@ -105,6 +105,7 @@
   border: solid 2px rgba(145, 17, 14, 0.5);
   border-radius: 8px;
 
+  background-color: rgba(211, 211, 211, 0.6);
 
   font-weight: bold;
   letter-spacing: 1px;
