--- a/src/app/popups/login-popup/login-popup.component.html
+++ b/src/app/popups/login-popup/login-popup.component.html
@@ -72,8 +72,8 @@
         />
 
         <div class="password-icon-container">
-          <i *ngIf="!passwordVisibility" class="fa fa-eye" (click)="togglePasswordVisibility()"></i>
-          <i *ngIf="passwordVisibility" class="fa fa-eye-slash" (click)="togglePasswordVisibility()"></i>
+          <i *ngIf="passwordVisibility" class="fa fa-eye" (click)="togglePasswordVisibility()"></i>
+          <i *ngIf="!passwordVisibility" class="fa fa-eye-slash" (click)="togglePasswordVisibility()"></i>
         </div>
 
       </div>
