--- a/src/app/popups/signup-popup/signup-popup.component.html
+++ b/src/app/popups/signup-popup/signup-popup.component.html
@@ -178,7 +178,7 @@
           [type]="confirmPassVisibility ? 'text' : 'password'"
           formControlName="confirmPassword"
           class="form-control"
-          placeholder="Password"
+          placeholder="Confirm password"
         />
 
         <div class="password-icon-container">
@@ -223,7 +223,7 @@
   <p
     class="login"
   >
-    Do you have an account? <a (click)="closePopup('login')">Login here</a>
+    Do you already have an account? <a (click)="closePopup('login')">Login here</a>
   </p>
 
 
