--- a/src/app/popups/login-popup/login-popup.component.css
+++ b/src/app/popups/login-popup/login-popup.component.css
@@ -116,6 +116,17 @@
   color: darkred;
 }
 
+.error-login-container {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: center;
+  margin-top: 10px;
+}
+#error {
+  color: darkred;
+}
+
 
 /* REGISTER */
 .register a {
