Login dialog solved

--- a/src/app/popups/login-popup/login-popup.component.html
+++ b/src/app/popups/login-popup/login-popup.component.html
@@ -101,10 +101,17 @@
       </button>
     </div>
 
+    <p
+      class="recover-password"
+    >
+      <a (click)="recoverPassword()">Recover password</a>
+    </p>
+
   </form>
 
-  <div class="error-login-container">
+  <div class="after-login-container">
     <p id="error"></p>
+    <p id="recover"></p>
   </div>
 
 
