--- a/src/app/popups/login-popup/login-popup.component.css
+++ b/src/app/popups/login-popup/login-popup.component.css
@@ -111,12 +111,12 @@
   letter-spacing: 1px;
 }
 
-/* FORM ERRORS */
+/* AFTER LOGIN MESSAGES */
 .invalid-input div{
   color: darkred;
 }
 
-.error-login-container {
+.after-login-container {
   display: flex;
   flex-direction: row;
 
@@ -126,6 +126,26 @@
 #error {
   color: darkred;
 }
+#recover {
+  color: #00ff00;
+}
+
+/* RECOVER PASSWORD */
+.recover-password{
+  display: flex;
+
+  justify-content: center;
+
+  font-size: 14px;
+}
+
+.recover-password a {
+  cursor: pointer;
+
+  color: #039be5;
+}
+
+
 
 
 /* REGISTER */
@@ -134,4 +154,6 @@
 
   color: #039be5;
 }
+
+/* RECOVER PASSWORD */
 
