login and logout working

--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -8,7 +8,7 @@
   <div class="second-row">
     <div class="logo">
       <a routerLink="/">
-        <img src="assets/logo/dolcevita_logo.jpg" alt="Logo">
+        <img src="../../../../assets/logo/dolcevita_logo.jpg" alt="Logo">
       </a>
     </div>
 
