--- a/src/app/components/header/switchlang/switch-lang.component.html
+++ b/src/app/components/header/switchlang/switch-lang.component.html
@@ -11,19 +11,19 @@
     <ul class="change-lang-menu" [hidden]="isDivHidden">
       <li (click)="switchLang('en')">
         <p>
-          <img class="" src="assets/img/languages/united-kingdom.png">
+          <img class="" src="../../../../assets/img/languages/united-kingdom.png">
           English
         </p>
       </li>
       <li (click)="switchLang('it')">
         <p>
-          <img class="" src="assets/img/languages/italian.png">
+          <img class="" src="../../../../assets/img/languages/italian.png">
           Italiano
         </p>
       </li>
       <li (click)="switchLang('ko')">
         <p>
-          <img class="" src="assets/img/languages/south-korea.png">
+          <img class="" src="../../../../assets/img/languages/south-korea.png">
           한국어
         </p>
       </li>
