--- a/src/app/components/header/login/login.component.html
+++ b/src/app/components/header/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login-container">
 
-  <!-- LOGIN BUTTON-->
+  <!-- LOGIN BUTTON *ngIf="userService.uid | async as uid"-->
   <button
       (click)="openLogin()"
-      *ngIf="isAuthenticated"
+      *ngIf="(isLogged | async) === null"
   >
     <i class="fa fa-user-circle" aria-hidden="true"></i>
     {{ "login" | translate}}
@@ -11,18 +11,20 @@
   <!-- SIGNUP BUTTON-->
   <button
       (click)="openSignUp()"
-      *ngIf="isAuthenticated"
+      *ngIf="(isLogged | async) === null"
   >
     <i class="fa fa-user-plus" aria-hidden="true"></i>
     {{ "sign-up" | translate}}
   </button>
 
-  <!-- LOGOUT BUTTON-->
-  <button *ngIf="!isAuthenticated" (click)="logout()" routerLink="/">
+  <!-- LOGOUT BUTTON *ngIf="userService.uid | async as uid" -->
+  <button
+    (click)="logout()"
+    *ngIf="(isLogged | async) !== null"
+  >
     <i class="fa fa-sign-out" aria-hidden="true"></i>
     {{ "logout" | translate}}
   </button>
-
 
 </div>
 
