--- a/src/app/components/header/navbar/navbar.component.css
+++ b/src/app/components/header/navbar/navbar.component.css
@@ -44,7 +44,7 @@
   margin-top: 10px;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
