creation of new user within the db

--- a/src/app/components/header/login/login.component.html
+++ b/src/app/components/header/login/login.component.html
@@ -31,7 +31,8 @@
       (click)="toggleDiv()"
     >
       <i class="fa fa-user" aria-hidden="true"></i>
-      Alessandro Seghini
+      Name
+      <!--{{ userService.getUser(loggedUserUid) }}-->
     </button>
 
 
