--- a/src/app/components/popups/signup-popup/signup-popup.component.html
+++ b/src/app/components/popups/signup-popup/signup-popup.component.html
@@ -35,6 +35,7 @@
           formControlName="name"
           class="form-control"
           placeholder="Enter your first name"
+          [(ngModel)]="user.name"
         />
       </div>
 
@@ -66,6 +67,7 @@
           formControlName="surname"
           class="form-control"
           placeholder="Enter your last name"
+          [(ngModel)]="user.surname"
         />
       </div>
 
@@ -98,6 +100,7 @@
           formControlName="email"
           class="form-control"
           placeholder="Enter your email"
+          [(ngModel)]="user.email"
         />
       </div>
 
