About page info retrieval completed

--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -24,7 +24,7 @@
         <li><a routerLink="/" >{{ "home" | translate }}</a></li>
         <li><a routerLink="/events" >{{ "events" | translate }}</a></li>
         <li><a routerLink="/articles" >{{ "articles" | translate }}</a></li>
-        <li><a routerLink="/about" >{{ "about" | translate }}</a></li>
+        <li><a routerLink="about" >{{ "about.nav-title" | translate }}</a></li>
       </ul>
 
       <login></login>
