--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,17 +2,15 @@
 
 .page-container {
   margin-top: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  flex-grow: 1;
+  margin-bottom: 150px;
 }
+
 
 app-footer {
   position: sticky;
   top: 100%;
 }
+
 
 
 /*
