--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,57 +1,4 @@
-<!--
-<div class="container">
-  <img src="assets/img/italia.jpg">
-</div>
--->
+<p>HOME</p>
 
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
-<p>Home</p>
 
 
