About page displaying members correctly. It remains to change the data retrieved after users modify the selected language

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -32,7 +32,7 @@
     *ngIf="(memberPhotos | async) !== null && (members | async) !== null"
   >
     <div class="member-title-container">
-      <h2>Members</h2>
+      <h2>{{ 'about.member-title' | translate}}</h2>
     </div>
 
     <div *ngIf="(members | async) as members">
