About page displaying members correctly. It remains to change the data retrieved after users modify the selected language

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -27,6 +27,7 @@
   </div>
 
 
+  <!-- MEMBERS -->
   <div
     class="members-container"
     *ngIf="(memberPhotos | async) !== null && (members | async) !== null"
