--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,39 @@
-<p>HOME</p>
+<!--
+<home-slideshow></home-slideshow>
+-->
 
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
+<p>Home</p>
 
 
