--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,16 @@ body {
   height: 100%;
 }
 
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+
 app-root {
   height: 100%;
 }
