EVENT CREATION COMPLETED

--- a/src/app/components/admin/admin-header/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/components/admin/admin-header/sidebar-menu/sidebar-menu.component.html
@@ -57,11 +57,11 @@
             class="fa fa-arrow-left"></i>
         </div>
         <p
-          (click)="changeTextMenu('Events')"
+          (click)="moveVerticalMenu()"
           routerLink="admin/events/view"
         >View</p>
         <p
-          (click)="changeTextMenu('Events')"
+          (click)="moveVerticalMenu()"
           routerLink="admin/events/create"
         >Create</p>
         <!--
@@ -95,18 +95,10 @@
             style="font-size: 16px"
             class="fa fa-arrow-left"></i>
         </div>
-        <p
-          (click)="changeTextMenu('Articles')"
-        >View</p>
-        <p
-          (click)="changeTextMenu('Articles')"
-        >Create</p>
-        <p
-          (click)="changeTextMenu('Articles')"
-        >Modify</p>
-        <p
-          (click)="changeTextMenu('Articles')"
-        >Delete</p>
+        <p>View</p>
+        <p>Create</p>
+        <p>Modify</p>
+        <p>Delete</p>
       </div>
 
 
@@ -131,18 +123,10 @@
             class="fa fa-arrow-left"></i>
         </div>
 
-        <p
-          (click)="changeTextMenu('Announcements')"
-        >View</p>
-        <p
-          (click)="changeTextMenu('Announcements')"
-        >Create</p>
-        <p
-          (click)="changeTextMenu('Announcements')"
-        >Modify</p>
-        <p
-          (click)="changeTextMenu('Announcements')"
-        >Delete</p>
+        <p>View</p>
+        <p>Create</p>
+        <p>Modify</p>
+        <p>Delete</p>
       </div>
 
 
@@ -167,18 +151,10 @@
             class="fa fa-arrow-left"></i>
         </div>
 
-        <p
-          (click)="changeTextMenu('Members')"
-        >View</p>
-        <p
-          (click)="changeTextMenu('Members')"
-        >Create</p>
-        <p
-          (click)="changeTextMenu('Members')"
-        >Modify</p>
-        <p
-          (click)="changeTextMenu('Members')"
-        >Delete</p>
+        <p>View</p>
+        <p>Create</p>
+        <p>Modify</p>
+        <p>Delete</p>
       </div>
     </div>
 
@@ -203,12 +179,8 @@
           style="font-size: 16px"
           class="fa fa-arrow-left"></i>
       </div>
-      <p
-        (click)="changeTextMenu('Pages')"
-      >Home</p>
-      <p
-        (click)="changeTextMenu('Pages')"
-      >About</p>
+      <p>Home</p>
+      <p>About</p>
     </div>
 
 
