--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,7 +11,6 @@
 
 
 
-
 .content {
   display: flex;
   flex-direction: column;
@@ -22,6 +21,13 @@ app-footer {
   position: sticky;
   top: 100%;
   bottom: 0;
+}
+
+
+@media only screen and (max-width: 600px){
+  .container-admin-page {
+    padding: 80px 20px 80px 70px;
+  }
 }
 
 
