--- a/src/app/components/admin/admin-event/create/events-create.component.html
+++ b/src/app/components/admin/admin-event/create/events-create.component.html
@@ -1,1 +1,303 @@
-<quill-editor [style]="{ height: '300px' }"></quill-editor>
+<div class="text-editor-container">
+  <h1 class="main-title-text-editor">Create event</h1>
+
+  <form
+    id="form-editor"
+    [formGroup]="eventForm"
+   >
+    <div class="grid-container">
+      <div class="form-element-container">
+        <div class="element">
+          <label>
+            <i class="fa fa-map-marker"></i>
+            Address
+          </label>
+          <input
+            type="text"
+            formControlName="address"
+            placeholder="Enter the address"
+          >
+        </div>
+        <div
+          *ngIf="eventForm.get('address')?.dirty || eventForm.get('address')?.touched || submitted"
+          class="invalid-input"
+        >
+          <div
+            *ngIf="eventForm.get('address')?.hasError('required')"
+          >
+            <i class="fa fa-exclamation-circle"></i> Address is required
+          </div>
+        </div>
+      </div>
+
+      <div class="form-element-container">
+        <div class="element">
+          <label>
+            <i class="fa fa-calendar"></i>
+            Date
+          </label>
+          <input
+            type="datetime-local"
+            formControlName="date"
+            onkeydown="return false"
+          >
+        </div>
+        <div
+          *ngIf="eventForm.get('date')?.dirty || eventForm.get('date')?.touched || submitted"
+          class="invalid-input"
+        >
+          <div
+            *ngIf="eventForm.get('date')?.hasError('required')"
+          >
+            <i class="fa fa-exclamation-circle"></i> Date is required
+          </div>
+          <div
+            *ngIf="eventForm.get('date')?.hasError('futureDateValidation')"
+          >
+            <i class="fa fa-exclamation-circle"></i> Date is not valid
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="form-element-container">
+      <div class="element">
+        <label>
+          <i class="fa fa-picture-o" aria-hidden="true"></i>
+          Cover photo
+        </label>
+        <input
+          id="cover-photo"
+          style="width: 100%"
+          type="file"
+          accept="image/*"
+          formControlName="coverPhoto"
+          (change)="onFileChange($event)"
+        >
+      </div>
+      <div
+        *ngIf="eventForm.get('coverPhoto')?.dirty || eventForm.get('coverPhoto')?.touched || submitted"
+        class="invalid-input"
+      >
+        <div
+          *ngIf="eventForm.get('coverPhoto')?.hasError('required')"
+        >
+          <i class="fa fa-exclamation-circle"></i> Cover photo is required
+        </div>
+        <div
+          *ngIf="eventForm.get('coverPhoto')?.hasError('imageValidator')"
+        >
+          <i class="fa fa-exclamation-circle"></i> The format is not accepted
+        </div>
+      </div>
+    </div>
+
+
+    <div id="im-cont" class="image-container hidden">
+      <img id="uploaded-image" alt="eventImage">
+    </div>
+
+  </form>
+
+  <hr>
+
+  <div id="buttons-container" class="buttons-container">
+    <button
+      class="selected"
+      (click)="changeSelectedTextEditor('english')"
+      id="english-button"
+    >English</button>
+    <button
+      (click)="changeSelectedTextEditor('italian')"
+      id="italian-button"
+    >Italian</button>
+    <button
+      (click)="changeSelectedTextEditor('korean')"
+      id="korean-button"
+    >Korean</button>
+  </div>
+
+  <div
+    id="text-editors"
+    class="text-editors"
+  >
+    <div
+      id="english-text-editor"
+      [hidden]="selectedLanguage !== 'english'"
+    >
+
+      <form
+        [formGroup]="titleForm"
+      >
+        <div class="form-element-container">
+          <div class="element">
+            <label>
+              <i class="fa fa-header" aria-hidden="true"></i>
+              English title
+            </label>
+            <input
+              id="en-title"
+              placeholder="English title"
+              style="width: 100%"
+              type="text"
+              formControlName="enTitle"
+            >
+          </div>
+          <div
+            *ngIf="titleForm.get('enTitle')?.dirty || titleForm.get('enTitle')?.touched || submitted"
+            class="invalid-input"
+          >
+            <div
+              *ngIf="titleForm.get('enTitle')?.hasError('required')"
+            >
+              <i class="fa fa-exclamation-circle"></i> English title is required
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <angular-editor id="editor-create-events-en" [(ngModel)]="htmlContentEn" [config]="editorConfig">
+        <ng-template>
+          <ae-toolbar-set>
+            <!--<ae-button iconClass="fa fa-html5" title="Angular editor logo" (buttonClick)="executeCommandFn('insertHtml')"></ae-button>-->
+          </ae-toolbar-set>
+        </ng-template>
+      </angular-editor>
+
+      <div class="photo-button-container">
+        <button
+          class="add-photo-button"
+          (click)="addNewPhoto('english')"
+        >
+          Add photo
+        </button>
+      </div>
+
+      <ng-template #englishTextEditor></ng-template>
+
+    </div>
+
+    <div
+      id="italian-text-editor"
+      [hidden]="selectedLanguage !== 'italian'"
+    >
+
+      <form
+        [formGroup]="titleForm"
+      >
+        <div class="form-element-container">
+          <div class="element">
+            <label>
+              <i class="fa fa-header" aria-hidden="true"></i>
+              Italian title
+            </label>
+            <input
+              id="it-title"
+              placeholder="Italian title"
+              style="width: 100%"
+              type="text"
+              formControlName="itTitle"
+            >
+          </div>
+          <div
+            *ngIf="titleForm.get('itTitle')?.dirty || titleForm.get('itTitle')?.touched || submitted"
+            class="invalid-input"
+          >
+            <div
+              *ngIf="titleForm.get('itTitle')?.hasError('required')"
+            >
+              <i class="fa fa-exclamation-circle"></i> Italian title is required
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <angular-editor id="editor-create-events-it" [(ngModel)]="htmlContentIt" [config]="editorConfig">
+        <ng-template>
+          <ae-toolbar-set>
+            <!--<ae-button iconClass="fa fa-html5" title="Angular editor logo" (buttonClick)="executeCommandFn('insertHtml')"></ae-button>-->
+          </ae-toolbar-set>
+        </ng-template>
+      </angular-editor>
+
+      <div class="photo-button-container">
+        <button
+          class="add-photo-button"
+          (click)="addNewPhoto('italian')"
+        >
+          Add photo
+        </button>
+      </div>
+
+      <ng-template #italianTextEditor></ng-template>
+
+    </div>
+
+    <div
+      id="korean-text-editor"
+      [hidden]="selectedLanguage !== 'korean'"
+    >
+
+      <form
+        [formGroup]="titleForm"
+      >
+        <div class="form-element-container">
+          <div class="element">
+            <label>
+              <i class="fa fa-header" aria-hidden="true"></i>
+              Korean title
+            </label>
+            <input
+              placeholder="Korean title"
+              id="ko-title"
+              style="width: 100%"
+              type="text"
+              formControlName="koTitle"
+            >
+          </div>
+          <div
+            *ngIf="titleForm.get('koTitle')?.dirty || titleForm.get('koTitle')?.touched || submitted"
+            class="invalid-input"
+          >
+            <div
+              *ngIf="titleForm.get('koTitle')?.hasError('required')"
+            >
+              <i class="fa fa-exclamation-circle"></i> Korean title is required
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <angular-editor id="editor-create-events-ko" [(ngModel)]="htmlContentKo" [config]="editorConfig">
+        <ng-template>
+          <ae-toolbar-set>
+            <!--<ae-button iconClass="fa fa-html5" title="Angular editor logo" (buttonClick)="executeCommandFn('insertHtml')"></ae-button>-->
+          </ae-toolbar-set>
+        </ng-template>
+      </angular-editor>
+
+      <div class="photo-button-container">
+        <button
+          class="add-photo-button"
+          (click)="addNewPhoto('korean')"
+        >
+          Add photo
+        </button>
+      </div>
+
+      <ng-template #koreanTextEditor></ng-template>
+
+    </div>
+  </div>
+
+
+  <button class="form-submitter" (click)="submitForm();">
+    Create event
+  </button>
+
+
+
+
+</div>
