--- a/src/app/components/admin/admin-header/sidebar-menu/sidebar-menu.component.css
+++ b/src/app/components/admin/admin-header/sidebar-menu/sidebar-menu.component.css
@@ -61,6 +61,7 @@
   left: 0;
 
   position: fixed;
+  z-index: 999;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -154,7 +155,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .close-sub-menu-container h6 {
