EVENT CREATION COMPLETED WITH FIRESTORAGE UPLOAD

--- a/src/app/components/admin/admin-header/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/components/admin/admin-header/sidebar-menu/sidebar-menu.component.html
@@ -57,11 +57,11 @@
             class="fa fa-arrow-left"></i>
         </div>
         <p
-          (click)="moveVerticalMenu()"
+          (click)="moveVerticalMenu();toggleDropdownMenu('events');"
           routerLink="admin/events/view"
         >View</p>
         <p
-          (click)="moveVerticalMenu()"
+          (click)="moveVerticalMenu();toggleDropdownMenu('events');"
           routerLink="admin/events/create"
         >Create</p>
         <!--
